Fix wonky spacing
Got this wrong in a previous commit. `0` made it too tight.

--- a/app/assets/stylesheets/components/area-list.scss
+++ b/app/assets/stylesheets/components/area-list.scss
@@ -59,7 +59,6 @@
       padding-right: govuk-spacing(2);
       background: $light-blue-25;
       margin-right: govuk-spacing(3);
-      margin-bottom: 0;
     }
 
   }
